--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,6 +99,59 @@ nav ul li a.active {
     background-color: black;
 }
 
+.drop-down-button {
+    display: none;
+    font-size: 1.5rem;
+    margin: -0.625rem 0;
+}
+
+@media (max-width: 425px) {
+    .drop-down-button {
+        display: flex;
+    }
+    
+    nav {
+        position: relative;
+    }
+    
+    nav ul {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        flex-direction: column;
+        background-color: white;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+        border-left: none;
+        border-right: none;
+        display: none;
+        width: 100vw;
+        margin-left: -2rem;
+        padding: 0;
+    }
+    
+    nav ul.active {
+        display: flex;
+    }
+    
+    nav ul li a {
+        display: block;
+        width: 100%;
+        margin-left: 0;
+        text-align: left;
+        border-left: none;
+        border-right: none;
+        border-top: none;
+        border-bottom: 1px solid black;
+        padding: 0.625rem 2rem;
+    }
+    
+    nav ul li:last-child a {
+        border-bottom: none;
+    }
+}
+
 main,
 main > .container {
     display: flex;
