--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,8 +123,6 @@ nav ul li a.active {
         background-color: white;
         border-top: 1px solid black;
         border-bottom: 1px solid black;
-        border-left: none;
-        border-right: none;
         display: none;
         width: 100vw;
         margin-left: -2rem;
@@ -175,6 +173,7 @@ footer p {
     flex: 1;
     margin: 1rem 0;
     border: 1px solid black;
+    position: relative;
 }
 
 .greeting-card p,
